init configs and basic libs added - pre format

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A minimalist chess web application built with modern web technologies. This app provides a fully functional chess game with standard rules enforcement that can be played locally by two players.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives",
+    "format": "prettier --write \"src/**/*.{ts,tsx,scss,css,json}\"",
+    "lint:fix": "eslint src --ext ts,tsx --fix",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -13,9 +18,34 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/vakac995/chess/issues"
   },
-  "homepage": "https://github.com/vakac995/chess#readme"
+  "homepage": "https://github.com/vakac995/chess#readme",
+  "dependencies": {
+    "chess.js": "^1.2.0",
+    "react": "^19.1.0",
+    "react-chessboard": "^4.7.3",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
+    "@vitejs/plugin-react": "^4.4.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "sass": "^1.86.3",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6"
+  }
 }
