tests setup + sonarqube coverage added | attempt 1
pre-format

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,19 @@
 sonar.projectKey=vakac995_chess
 sonar.organization=vakac995
 
-
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=chess
-#sonar.projectVersion=1.0
+sonar.projectName=chess
+sonar.projectVersion=1.0
 
+# Path configurations
+sonar.sources=src
+sonar.exclusions=**/*.test.tsx,**/*.test.ts,**/tests/**
+sonar.tests=src
+sonar.test.inclusions=**/*.test.tsx,**/*.test.ts
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# Code coverage
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts,**/tests/**,src/main.tsx,src/vite-env.d.ts
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
