--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   },
   "homepage": "https://github.com/vakac995/chess#readme",
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "chess.js": "^1.2.0",
+    "jotai": "^2.12.3",
     "react": "^19.1.0",
     "react-chessboard": "^4.7.3",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
