cleanup + utils added

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives",
-    "format": "prettier --write \"src/**/*.{ts,tsx,scss,css,json}\"",
-    "lint:fix": "eslint src --ext ts,tsx --fix",
+    "lint": "eslint eslint.config.js postcss.config.js tailwind.config.js vite.config.ts vitest.config.ts src --ext ts,tsx,js --report-unused-disable-directives",
+    "format": "prettier --write \"*.{js,ts,tsx,scss,css,json}\" \"src/**/*.{ts,tsx,scss,css,json}\"",
+    "lint:fix": "eslint eslint.config.js postcss.config.js tailwind.config.js vite.config.ts vitest.config.ts src --ext ts,tsx,js --fix",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -41,6 +41,7 @@
     "@tailwindcss/postcss": "^4.1.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/node": "^22.15.12",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
