--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "dev:all": "npm run lint && npm run format && npm run test && npm run build && npm run dev"
+    "check:all": "npm run lint && npm run format && npm run test && npm run build"
   },
   "repository": {
     "type": "git",
