Adds Prettier plugin for Tailwind and docs for theming
Integrates `prettier-plugin-tailwindcss` to automatically sort utility classes, enhancing code consistency and readability.

Adds comprehensive documentation outlining a refactor strategy for a "visions"-based theming system. This system will leverage Tailwind CSS custom properties for dynamic styling.

Includes `clsx` and `cva` as new dependencies to support the planned theming implementation and component variations.

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "endOfLine": "lf",
-  "jsxBracketSameLine": false
+  "jsxBracketSameLine": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
