--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "chess.js": "^1.2.0",
+    "clsx": "^2.1.1",
+    "cva": "^0.0.0",
     "jotai": "^2.12.3",
     "react": "^19.1.0",
     "react-chessboard": "^4.7.3",
@@ -58,6 +60,7 @@
     "jsdom": "^26.1.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.86.3",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
