--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "chess.js": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cva": "^0.0.0",
     "jotai": "^2.12.3",
     "react": "^19.1.0",
     "react-chessboard": "^4.7.3",
