--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,15 +15,17 @@
     "strict": true,
     "baseUrl": "./src",
     "paths": {
-      "@components/*": ["components/*"],
-      "@features/*": ["features/*"],
-      "@hooks/*": ["hooks/*"],
-      "@store/*": ["store/*"],
-      "@styles/*": ["styles/*"],
-      "@assets/*": ["assets/*"],
-      "@types/*": ["types/*"],
-      "@utils/*": ["utils/*"],
-      "@context/*": ["context/*"],
+      "@/components/*": ["components/*"],
+      "@/features/*": ["features/*"],
+      "@/hooks/*": ["hooks/*"],
+      "@/store/*": ["store/*"],
+      "@/styles/*": ["styles/*"],
+      "@/assets/*": ["assets/*"],
+      "@/types/*": ["types/*"],
+      "@/utils/*": ["utils/*"],
+      "@/context/*": ["context/*"],
+      "@/atoms/*": ["atoms/*"],
+      "@/schemas/*": ["schemas/*"],
       "@/*": ["*"]
     },
     "noUnusedLocals": true,
