--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.15.12",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
