--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jotai": "^2.12.3",
     "react": "^19.1.0",
     "react-chessboard": "^4.7.3",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.2",
     "zod": "^3.24.4"
