--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "check:all": "npm run lint && npm run format && npm run test && npm run build"
+    "check:all": "npm run lint && npm run format && npm run build",
+    "precommit": "npm run lint && npm run format && npm run test && npm run build"
   },
   "repository": {
     "type": "git",
